🔥 Updated BASE_URL for production backend

--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,6 @@ MONGO_URI=mongodb+srv://invoice_user:saurav9798@cluster0.vsiixqw.mongodb.net/inv
 JWT_SECRET=MyVerySecretJWTKey_123456789
 EMAIL_USER=saurav.kr6289@gmail.com
 EMAIL_PASS=hxplenaxpaawauqv
-BASE_URL=http://localhost:4000
+BASE_URL=https://mern-invoice-b1kv.onrender.com
+
 
