--- a/server/.env
+++ b/server/.env
@@ -20,8 +20,8 @@ FRONTEND_URL=http://localhost:5173
 
 # Cloudinary Configuration (Required for profile picture uploads)
 # To enable avatar uploads, sign up at https://cloudinary.com and add your credentials here
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=djhbjp5dj
+CLOUDINARY_API_KEY=835137226692696
+CLOUDINARY_API_SECRET=gyKJVYa1Z3HWStpzkb-v6eVugmc
 
 
